@@ -23,14 +23,14 @@ public class EdificioConfiguration {
 	@Bean("FakeEdificio")
 	@Scope("prototype")
 	public Edificio fakeEdificio() {
-		Faker fake = Faker.instance(new Locale("it_IT"));
-		Edificio E = new Edificio();
+		Faker fake = Faker.instance(Locale.of("it"));
+		Edificio e1 = new Edificio();
 		
-		E.setNome_edificio(fake.company().name());
-		E.setIndirizzo(fake.address().streetAddress() + fake.address().streetAddressNumber());
-		E.setCitta(fake.address().city());
+		e1.setNome_edificio(fake.company().name());
+		e1.setIndirizzo(fake.address().streetAddress() + fake.address().streetAddressNumber());
+		e1.setCitta(fake.address().city());
 		
-		return E;
+		return e1;
 	}
 
 }
